@@ -8,6 +8,11 @@ CHANGES IN VERSION 1.3.1
    as first column synapterTiny$QuantPep3DData$X. Detected 
    thanks to new mergedEMRTs arg. <2013-05-13 Mon>
  o added mergedEMRTs arg to synergise <2013-05-22 Wed>
+ o Synapter checks that one file per list element is passed <2013-05-28 Tue>
+ o minor typo/fixes <2013-05-28 Tue>
+ o new idSource column when matching EMRTs <2013-05-29 Wed>
+ o new performance2 method that shows identification source 
+   and NA values contingency table <2013-05-29 Wed>
 
 CHANGES IN VERSION 1.3.0
 ------------------------
